css/style.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600);
@import url('font-awesome.css');
/* ==== overwrite bootstrap standard ==== */
@import url('animate.css');
@viewport {
  width: device-width ;
  zoom: 1.0 ;
} 

.bg {
	overflow-x: hidden;
	overflow-x: initial !important;
}

.bgcolor {
	background-color: #00b4ff;
}

body {
	font-family:'Open Sans', Arial, sans-serif;
	font-size:14px;
	font-weight:300;
	line-height:1.6em;
	color:#fff;
	background-color:#00b4ff;;
	overflow-x:hidden;
}
	
.container2 {
	max-width: 100%;
	height: auto;
	background-color: #00b4ff;
	margin-bottom: 20px;
	margin-top: 20px;
}

.titlecontainerdiv {
	position: absolute;
	z-index: 5;
}

.titlemain {
	width: 90%;
	height: auto;
	
}

.hopecenter {	
	
	margin-top: 20px;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 9999;
}

.img-hor-vert {	
	-moz-transform: scaleX(-1);        
	-o-transform: scaleX(-1);       
	-webkit-transform: scaleX(-1);       
	transform: scaleX(-1);       
	filter: FlipH;      
	-ms-filter: "FlipH";
}


@keyframes titleslide {
    from { left: -150%; }
    to { left: 52%; }
}

hi,h2,h4,h6 {
	color:#272727;
	line-height:1.1em;
}

p {
	color:#aaa;
	font-size:13px;

}

div.cons {
	margin-top: 275px;
	margin-bottom: 275px;
}

a {
    text-decoration:none;
    transition: all 0.1s ease-in-out;
    -moz-transition: all 0.1s ease-in-out;
    -webkit-transition: all 0.1s ease-in-out;
    -o-transition: all 0.1s ease-in-out;
    outline: none;
	color:#272727;
}

a:hover {
	text-decoration: none;
	color:#aaa;	
	}

.btn {
	border-radius:0;
	margin-top:10px;
	background-color: #70bb65;
	text-transform:uppercase;
	border-color:#fff;
	font-size:14px;
}

.btn:hover {
	background-color: #fff;
	border-color:#f2f2f2;
	color:#272727;	
}

.tenCom {
	text-decoration:none;
    	transition: all 0.1s ease-in-out;
    	-moz-transition: all 0.1s ease-in-out;
    	-webkit-transition: all 0.1s ease-in-out;
   	 -o-transition: all 0.1s ease-in-out;
   	 
	color:#272727;
	position: absolute;
   	 left: 45px;
	margin-top:150px;
	width: 270px;
	height: 687px;
}

ol {
	text-shadow: -0.1em -0.1em 0.02em gray;
	text-align: left;
	
}

.sep {
	line-height: 30px;
}

.container {
	height: 100px;
}

#money {
  animation: shake 10.0s infinite;
}

@keyframes shake {
 0% { transform: translate(-1px, 1px) rotate(0deg); }
  5% { transform: translate(1px, -2px) rotate(-1deg); }
  10% { transform: translate(-3px, 0px) rotate(1deg); }
  15% { transform: translate(3px, 2px) rotate(0deg); }
  20% { transform: translate(1px, -1px) rotate(-1deg); }
  25% { transform: translate(-1px, 2px) rotate(1deg); }
  30% { transform: translate(-3px, 1px) rotate(0deg); }
  35% { transform: translate(3px, 1px) rotate(-1deg); }
  40% { transform: translate(-1px, -3px) rotate(1deg); }
  45% { transform: translate(1px, 1px) rotate(0deg); }
  50% { transform: translate(-2px, -1px) rotate(-1deg); }
55% { transform: translate(-1px, 1px) rotate(0deg); }
  60% { transform: translate(1px, -2px) rotate(-1deg); }
  65% { transform: translate(-3px, 0px) rotate(1deg); }
  70% { transform: translate(3px, 2px) rotate(0deg); }
  75% { transform: translate(1px, -1px) rotate(-1deg); }
  80% { transform: translate(-1px, 2px) rotate(1deg); }
  85% { transform: translate(-3px, 1px) rotate(0deg); }
  90% { transform: translate(3px, 1px) rotate(-1deg); }
  95% { transform: translate(-1px, -3px) rotate(1deg); }
  100% { transform: translate(1px, 1px) rotate(0deg); }
0% { transform: translate(-1px, 1px) rotate(0deg); }
  
}

 	

.responsive {
  width: auto ;
  max-width: 100% ;
  height: auto ;
} 
/*===========================
  Menu and Navigation
============================ */


.menu {
	padding: 15px;
	font-size:20px;
	color: white;
	float:left;
	text-transform:uppercase;
	font-weight:600;	
}

.navbar-collapse {
  padding-right: 15px;
  padding-left: 15px;
  overflow-x: visible;
  -webkit-overflow-scrolling: touch;
  border-top: 0px solid transparent;
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
          box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
}
.navbar-collapse.in {
  overflow-y: auto;
}

.menu ul.nav-tabs li {
	color:#fff;	
}

.nav-tabs {
	border-bottom: 0;
}
.nav-tabs > li {
	float: left;
	margin-bottom: 0;
}

.nav-tabs > li > a {	
	border-radius:0;
	color:#fff;
	padding:30px;
}

.nav-tabs > li > a:hover {
	color:#272727;
	background:#fff;	
} 

.nav-tabs > li a.active {
	color: #555;
	cursor: default;
	background-color: #fff;
	border: 1px solid #fff;
	border-bottom-color:#fff;
}

.navbar-default {
	background-color: #70bb65;
	border-color:#70bb65;
}
/*===========================
vid border
===========================*/
.vid-border{
	
	border-left: 14px solid black;
	border-right: 14px solid black;
	border-bottom: 14px solid black;
	
}
/*===========================
vid background
============================*/



/*===========================
video
============================*/

.video-container {
	position:relative;
	padding-bottom:56.25%;
	padding-top:30px;
	height:0;
	overflow:hidden;
	background-color: #00b4ff;;
}

.video-container iframe, .video-container object, .video-container embed {
	position:absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
}

.imgbill {
	opacity: 0.5;
}

#containerbill {
	width: 282px; 
  	height: 150px;
  	position: relative;
}

.natdebt {
	
	font-size:25px;
	opacity: 100;
 	position: absolute;
    	top: 50%;
    	left: 50%;
    	transform: translate(-50%, -50%);
}

#imagetitlehope {
	animation: titlehope 30.0s;
  	animation-iteration-count: infinite;
}
/* ... */

